# DynamicWarehouseGeneration

./: .gitignore  .utils.rc.swp  LICENSE  README.md  frames.gv  runcom.rc  test.sh  utils.rc  z_utils.rc
bash/: compiling.sh  tml.sh  trees.sh  whiptail_config.sh
config/config_generator/: CMakeLists.txt  build.yaml  package.xml
config/config_generator/config/: .icra24_example.yaml.swp  icra24_example.yaml  warehouse_simplex.yaml  warehouse_simplex_BACKUP.yaml
config/config_generator/launch/: build.launch  gazebo.launch  world.launch
config/config_generator/scripts/: build.py  create.py  folder.py  grid.py  tmap.py  world.py  world.py.save
config/config_generator/tmule/: build.tmule
config/scenario_1/: CMakeLists.txt  package.xml
config/scenario_object_search_arena/: package.xml
config/scenario_object_search_arena/config/: t.tmap2  tmap.tmap2  tmap_simple (copy).tmap  tmap_simple.tmap
config/scenario_object_search_arena/config/tmaps/: WayPoint_example.yaml  base.yaml  tmap.tmap2
config/scenario_warehouse_simple/: CMakeLists.txt
config/scenario_warehouse_simple/config/: network.net  restricted_maps.rviz  world.world  world2.world  world_of_shelves.world
config/scenarios/scenario___frog/: CMakeLists.txt  package.xml
config/scenarios/scenario___frog/config/: wfc.grid  world.world
config/scenarios/scenario___frog/config/maps/: map.yaml
config/scenarios/scenario___frog/config/tmaps/: tmap.tmap2  tmaps.rviz
config/scenarios/scenario___warehouse_simple/: package.xml
config/scenarios/scenario___warehouse_simple/config/: wfc.grid  world.world
config/scenarios/scenario___warehouse_simple/config/maps/: map.yaml
config/scenarios/scenario___warehouse_simplex/: CMakeLists.txt  package.xml
config/scenarios/scenario___warehouse_simplex/config/: tmap.tmap2  wfc.grid
config/scenarios/scenario_template/: CMakeLists.txt  package.xml
config/scenarios/scenario_template/config/maps/: README.md
config/scenarios/scenario_template/config/tmaps/: README.md
fleet_interfaces/trolly/: CMakeLists.txt  package.xml
server/coordination/: CMakeLists.txt  package.xml
server/networking/: CMakeLists.txt  package.xml
simulator/gazebo_core/: CMakeLists.txt  package.xml
simulator/sim_core/: CMakeLists.txt  package.xml
simulator/sim_core/launch/: bringup.launch  frames.gv  maps.launch  mapserver.launch  navigation.launch  robot.launch  server.launch  topomaps.launch
simulator/sim_core/launch/old/: gazebo2.launch  movebase.launch  robot2.launch  topmap_restrictor.launch  topological_map_manager2_central.launch
simulator/sim_core/launch/old2/: gazebo.launch  map.launch  nav.launch  robot.launch
simulator/sim_core/scripts/: .warehouse_shelf_grid.py.swp  grid.py  restrictor.py  warehouse_shelf_grid.py  wfc.py
simulator/sim_core/tmule/: basic_sim.yaml  server_sim.tmule  server_sim.yaml  tmap_test.tmule  tmap_test.yaml  urdf_builder.tmule  urdf_builder.yaml
(+43 files in other folders)
