<?xml version="1.0"?>
<package format="2">
  <name>sim_core</name>
  <version>0.0.0</version>
  <description>The sim_core package</description>
  <maintainer email="diababa@todo.todo">diababa</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>turtlebot_gazebo</depend>
  <depend>turtlebot_navigation</depend>
  <export></export>
</package>
