<?xml version="1.0"?>
<package format="2">
  <name>scenario_template</name>
  <version>0.0.0</version>
  <description>The scenario_template package</description>
  <maintainer email="diababa@todo.todo">diababa</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export></export>
</package>
